# MMkCPPv2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  deploy.sh  ga-results-graph-gdb1  outfile  routes
benchmarks/: 100_test.csv
benchmarks/arc-routing/: graph-gdb10.csv  graph-val5.csv  graph-val9.csv
benchmarks/custom-graphs/: 5v-sample.txt  bryans-custom.csv  bryans-custom.txt  graph-raw-small.csv  test2.csv  test2.txt
benchmarks/mmkcpp/: graph-gdb11.csv  graph-gdb12.csv  graph-gdb18.csv  graph-gdb2.csv  graph-val4.csv  graph-val7.csv
benchmarks/nicks/: graph-raw21.csv  graph-val10D.csv  graph_csTcArqRsUYSrdnl.graphml
benchmarks/nicks/arc-routing/: graph-gdb1.csv  graph-gdb17.csv  graph-gdb19.csv  graph-gdb3.csv  graph-gdb9.csv  graph-val8.csv
benchmarks/nicks/arc-routing-windy/: graph-c24.csv  graph-c3.csv
benchmarks/stacs-graphs/: graph-raw-windy.csv  graph-raw.cord  graph-raw.csv  graph-raw21.csv
benchmarks/windy-mmkcpp/: graph-c21.csv  graph-raw-windy.csv
chinese-postman-solvers/andrew-brook/: Andrew-Brook-CPP.pyproj  Andrew-Brook-CPP.sln  Andrew_Brook_CPP.py  CPPSolutions.txt  andrew-brook-cpp-solutions.txt  helpers.py  run-cpp.sh
chinese-postman-solvers/super-mitch/: main.py  run-cpp.sh  super-mitch-cpp-results.txt
chinese-postman-solvers/super-mitch/chinesepostman/: eularian.py
chinese-postman-solvers/super-mitch/data/: data.py
problem-instances/bridge-generator/: 100-vertex-low-density.csv  1000-vertex-high-density.csv  1000-vertex-low-density.csv  20-vertex-low-density.csv  300-vertex-high-density.csv  300-vertex-low-density.csv  400-vertex-high-density.csv  400-vertex-low-density.csv  500-vertex-high-density.csv  500-vertex-low-density.csv  800-vertex-high-density.csv  800-vertex-low-density.csv
problem-instances/bridge-generator2/: B100.txt  B1000.txt  B200.txt  B900.txt
problem-instances/custom-graphs/bryans/: box.csv  box.html  complex-wheel.csv  complex-wheel.html  pacman.csv  pacman.html  simple-euler.csv  simple-euler.html  simple-truss.txt  simple.html
problem-instances/custom-graphs/sushils/: default-hierholzer.csv  default-hierholzer.html
problem-instances/problem-group/: AhrTest.txt  B300.txt  B400.txt  B500.txt  B600.txt  B700.txt  B800.txt  graph-raw.csv
problem-instances/stacs-graphs/: graph-raw.csv
problem-instances/truss-bridges/: pratt-visual.txt  pratt.csv  warren-visual.txt  warren.csv
python-visualizations/: CPP-Solver.py  FitnessPlot.py  GraphTravelPlans.py  Helpers.py  TravelPlot.py  python-visualizations.pyproj  python-visualizations.sln
results/: fitness-graph-gdb3-4R-pops80-200gens-fp-ox-swap.tsv  route-graph-gdb3-4R-pops80-200gens-fp-ox-swap.tsv
seed-files/: 10seeds.txt  30seeds.txt  seeds.txt
shell-automation/: Avg.sh  SetupParallelRuns.sh  run-ga.sh  run.sh  seeds.txt  setup-parallelization.sh
shell-automation/results/: 10C.txt  1B.txt  2C.txt  3A.txt  4A.txt  5A.txt  6C.txt  7B.txt  8A.txt  9B.txt  decoded-route-10B-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-10C-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-10D-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-1B-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-1B-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-1C-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-2A-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-2B-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-2C-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-3A-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-3A-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-3C-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-4A-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-4B-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-4C-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-5A-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-5B-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-5C-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-6A-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-6B-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-6C-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-7B-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-7C-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-7C-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-8B-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-8C-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-8C-2R-pops200-400gens-chc-ox-inv.tsv  decoded-route-9A-1R-pops200-400gens-chc-ox-inv.tsv  decoded-route-9A-5R-pops200-400gens-chc-ox-inv.tsv  decoded-route-9C-2R-pops200-400gens-chc-ox-inv.tsv  (+189 more)
src/: CMakeLists.txt  CPP.cpp  Const.h  Evaluate.cpp  GA.cpp  GA.h  Graph.cpp  Graph.h  Individual.cpp  Individual.h  Options.h  Path.cpp  Path.h  Population.cpp  Population.h  Utils.cpp  Utils.h  ga  main.cpp  outfile
src/cpp/: CPP.cpp  CPP.h
src/cpp/cached/: B100.cache  gdb1.cache
src/ga/: GA.cpp  GA.h  Gene.cpp  Gene.h  Individual.cpp  Individual.h  Options.h  Population.cpp  Population.h
src/graph/: CPP.cpp  CPP.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Path.cpp  Path.h
src/graph/cached/: AhrTest.cache
visualizations/: FitnessPlot.py  Graph.py  GraphTravelOverlap.py  GraphTravelPlans.py  Helpers.py  TravelPlot.py
